--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <meta name="description" content="Thuê xe 4-45 chỗ có tài xế Trà Vinh giá rẻ nhất 2025 ✓ Tour Trà Vinh 1-2 ngày Ao Bà Om, Chùa Chén Kiểu, Biển Ba Động ✓ Đưa đón sân bay Cần Thơ - Tân Sơn Nhất 24/7. Gọi ngay 0838 385 045">
     <meta name="keywords" content="thuê xe Trà Vinh, tour Trà Vinh 1 ngày, đưa đón sân bay Cần Thơ, thuê xe có tài xế Trà Vinh, Trường An Travel">
     <meta name="robots" content="index, follow">
-    <link rel="canonical" href="https://truongantravel.com">
+    <link rel="canonical" href="http://taxitravinhtruongan.online/">
 
     <!-- Open Graph -->
     <meta property="og:title" content="Trường An Travel - Thuê Xe & Tour Trà Vinh Giá Rẻ Nhất">
     <meta property="og:description" content="Xe đời mới 2024-2025 • Tài xế chuyên nghiệp • Hỗ trợ 24/7">
     <meta property="og:image" content="https://sf-static.upanhlaylink.com/img/image_20251122216e031318d1d90e86f92ac5b96248d5.jpg">
-    <meta property="og:url" content="https://truongantravel.com">
+    <meta property="og:url" content="http://taxitravinhtruongan.online/m">
 
     <!-- Schema LocalBusiness + FAQ -->
     <script type="application/ld+json">
